--- a/docs/style.css
+++ b/docs/style.css
@@ -202,7 +202,7 @@ h3 {
 .social.twitter:before {
   background: url("https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-256.png") center no-repeat;
 }
-.social.pinterest:before {
+.social.github:before {
   background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Pinterest-23-128.png") center no-repeat;
 }
 .social.linked-in:before {
